--- a/resume.tex
+++ b/resume.tex
@@ -57,7 +57,7 @@
 \makeatother
 
 \setlength{\parindent}{0pt}
-\setlength{\parskip}{4pt}
+\setlength{\parskip}{5pt}
 \renewcommand{\baselinestretch}{0.5}
 
 \date{}
@@ -114,7 +114,7 @@ Engineering}\tabularnewline
   parser in C\#.
 \end{itemize}
 
-\subsection{Software Developer}, CANARIE, Ottawa, ON May 2016 -- August 2016
+\textbf{Software Developer}, CANARIE, Ottawa, ON May 2016 -- August 2016
 
 \begin{itemize}
 \item
